--- a/src/profiles/debug/testcases/po_change.yml
+++ b/src/profiles/debug/testcases/po_change.yml
@@ -1,6 +1,6 @@
 tests
   - setup:
-      heap:
+      stack:
         - name: old_input_routine
           size: 8
           value: 0x12345678
@@ -15,7 +15,7 @@ tests
       registers:
         x4: new_input_routine
     checks:
-      heap:
+      stack:
         channel_block: new_input_routine
         corrupted: []
       sysvars:
