--- a/test/po_attr.yml
+++ b/test/po_attr.yml
@@ -17,3 +17,29 @@ tests:
       ram:
       sysvars:
       registers:
+        x0:
+          quad: 0x0000000000000097
+        x1:
+          quad: 0x0000000000005695
+        x9:
+          quad: 0x0000000000038880
+        x10:
+          quad: 0x0000000000000004
+        x11:
+          quad: 0x0000000000017780
+        x12:
+          quad: 0x000000000000006c
+        x13:
+          quad: 0x012f684c00000000
+        x14:
+          quad: 0x00000000000001bd
+        x15:
+          quad: 0xcccd000000000000
+        x16:
+          quad: 0x0000000000000a90
+        x17:
+          quad: 0x0000000000000047
+        x18:
+          quad: 0x0000000000000005
+        x24:
+          quad: 0x000000000006b280
