--- a/test/po_attr.yml
+++ b/test/po_attr.yml
@@ -5,42 +5,41 @@ tests:
       ram:
       sysvars:
         ATTR_T:
-          quad: 0b10010101 # byte
+          quad: 0b10010101
         MASK_T:
-          quad: 0b01010110 # byte
+          quad: 0b01010110
         P_FLAG:
-          quad: 0b10010111 # byte
+          quad: 0b10010111
       registers:
         x0:
-          quad: 0x50000 # display_file + XXXXX
+          quad: display_file + 0x17780
     effects:
       ram:
-        # [attributes_file+xxxxx] = yyyyyy
       sysvars:
       registers:
         x0:
-          quad: 0x0000000000000097 # . P_FLAG
+          quad: 0x97
         x1:
-          quad: 0x0000000000005695 # . ATTR_T + 256*MASK_T
+          quad: 0x5695
         x9:
-          quad: 0x0000000000038880 # display_file
+          quad: display_file
         x10:
-          quad: 0x0000000000000004 # . x attribute coordinate (0-107)
+          quad: 0x4
         x11:
-          quad: 0x0000000000017780 # . display_file offset
+          quad: 0x17780
         x12:
-          quad: 0x000000000000006c # . 108
+          quad: 108
         x13:
-          quad: 0x012f684c00000000 # . multiplication constant for dividing by 216
+          quad: 0x012f684c00000000
         x14:
-          quad: 0x00000000000001bd # . display file offset / 216
+          quad: 0x1bd
         x15:
-          quad: 0xcccd000000000000 # . multiplication constant for dividing by 5
+          quad: 0xcccd000000000000
         x16:
-          quad: 0x0000000000000a90 # . attribute address offset from attributes_file
+          quad: 0xa90
         x17:
-          quad: 0x0000000000000047 # . attribute value to apply
+          quad: 0x47
         x18:
-          quad: 0x0000000000000005 # . 5 * screen third (0x0 = top, 0x5 = middle, 0xA = bottom)
+          quad: 0x5
         x24:
-          quad: 0x000000000006b280 # attributes_file
+          quad: attributes_file
