--- a/test/po_attr.yml
+++ b/test/po_attr.yml
@@ -5,41 +5,62 @@ tests:
       ram:
       sysvars:
         ATTR_T:
+          # See http://www.breakintoprogram.co.uk/computers/zx-spectrum/screen-memory-layout
+          # temp colours: FLASH 1; BRIGHT 0; PAPER 2; INK 5
           quad: 0b10010101
         MASK_T:
+          # Current screen attributes are 0b01010101 => FLASH 0; BRIGHT 1; PAPER 2; INK 5
+          # Read attribute bits 1,2,4,6 from screen (0b01010101), and 0,3,5,7 from ATTR_T (0b10010101)
+          # => 0b11010101 => INK 5; PAPER 2; BRIGHT 1; FLASH 1
           quad: 0b01010110
         P_FLAG:
+          # OVER 1; INVERSE 1; INK 9 (=> INK 7 since PAPER 2) => 0b11010111 = 0xd7 => FLASH 1: BRIGHT 1: PAPER 2: INK 7
           quad: 0b10010111
       registers:
         x0:
-          quad: display_file + 0x17780
+          # section 1, line 5, column 4, pixel row 6
+          quad: display_file + 1*216*20*16 + 5*216 + 4*2 + 6*20*216
     effects:
       ram:
       sysvars:
       registers:
         x0:
+          # [P_FLAG]
           quad: 0x97
         x1:
+          # [ATTR_T] | ([MASK_T] << 8)
           quad: 0x5695
         x9:
+          # display_file
           quad: display_file
         x10:
-          quad: 0x4
+          # x attribute coordinate
+          quad: 4
         x11:
-          quad: 0x17780
+          # display_file offset
+          quad: 1*216*20*16 + 6*20*216 + 5*216 + 4*2
         x12:
+          # 108
           quad: 108
         x13:
+          # multiplication constant
           quad: 0x012f684c00000000
         x14:
-          quad: 0x1bd
+          # display_file offset / 216 (pixel line number in layout order)
+          quad: 1*20*16 + 6*20 + 5
         x15:
+          # multiplication contstant
           quad: 0xcccd000000000000
         x16:
-          quad: 0xa90
+          # attribute_file offset
+          quad: 1*108*20 + 5*108 + 4
         x17:
-          quad: 0x47
+          # [0-7] new attribute value
+          # [8-15] [MASK_T]
+          quad: 0x56d7
         x18:
-          quad: 0x5
+          # 5 * screen third (0/5/10)
+          quad: 1*5
         x24:
+          # attributes_file
           quad: attributes_file
