--- a/test/cl_addr.yml
+++ b/test/cl_addr.yml
@@ -1,28 +1,29 @@
 ---
 tests:
   - name: test case 1
-    setup:
-      registers:
-        x0:
-          # 60 - screen line
-          quad: 35
-    effects:
-      registers:
-        x1:
-          # screen line
-          quad: 25
-        x2:
-          # address of top left pixel of line to clear inside display file
-          quad: display_file + 1*20*16*216 + 5*216
-        x3:
-          # screen line / 20
-          quad: 1
-        x4:
-          # screen line % 20
-          quad: 5
-        x5:
-          # 216
-          quad: 216
-        x6:
-          # 69120
-          quad: 69120
+    spectrum4:
+      setup:
+        registers:
+          x0:
+            # 60 - screen line
+            value: 60 - 1*20 - 5
+      effects:
+        registers:
+          x1:
+            # screen line
+            value: 1*20 + 5
+          x2:
+            # address of top left pixel of line to clear inside display file
+            value: display_file + 1*20*16*216 + 5*216
+          x3:
+            # screen line / 20
+            value: 1
+          x4:
+            # screen line % 20
+            value: 5
+          x5:
+            # 216
+            value: 216
+          x6:
+            # 69120
+            value: 69120
