--- a/test/po_search.yml
+++ b/test/po_search.yml
@@ -1,52 +1,54 @@
 ---
 tests:
   - name: with custom table
-    setup:
-      registers:
-        x3:
-          quad: 0x3
-        x4:
-          asm: table
-    effects:
-      registers:
-        x4:
-          asm: telephone
-        x5:
-          quad: "'t'"
-        x6:
-          quad: 0
-    asm: |-
-      .align 3
-      table:
-        .asciz "hello"
-        .asciz "dog"
-        .asciz "cat"
-        .asciz "banana"
-      telephone:
-        .asciz "telephone"
-        .asciz "supper"
+    spectrum4:
+      setup:
+        registers:
+          x3:
+            value: 0x3
+          x4:
+            asm: table
+      effects:
+        registers:
+          x4:
+            asm: telephone
+          x5:
+            value: "'t'"
+          x6:
+            value: 0
+      asm: |-
+        .align 3
+        table:
+          .asciz "hello"
+          .asciz "dog"
+          .asciz "cat"
+          .asciz "banana"
+        telephone:
+          .asciz "telephone"
+          .asciz "supper"
   - name: with keywords
-    setup:
-      registers:
-        x3:
-          quad: 0x22
-        x4:
-          quad: tkn_table
-    effects:
-      registers:
-        x4:
-          quad: less_equal
-        x5:
-          quad: 0
-        x6:
-          quad: 0
-    asm: |-
-      .align 3
-      table:
-        .asciz "hello"
-        .asciz "dog"
-        .asciz "cat"
-        .asciz "banana"
-      telephone:
-        .asciz "telephone"
-        .asciz "supper"
+    spectrum4:
+      setup:
+        registers:
+          x3:
+            value: 0x22
+          x4:
+            value: tkn_table
+      effects:
+        registers:
+          x4:
+            value: less_equal
+          x5:
+            value: 0
+          x6:
+            value: 0
+      asm: |-
+        .align 3
+        table:
+          .asciz "hello"
+          .asciz "dog"
+          .asciz "cat"
+          .asciz "banana"
+        telephone:
+          .asciz "telephone"
+          .asciz "supper"
