--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -11,8 +11,8 @@ COPY build/curl /usr/local/bin
 RUN apt-get update
 RUN apt-get upgrade -y
 
-# xz-utils is needed by tar command below and build-essential is needed for building z80 binutils and libspectrum/fuse and libglib2.0 is needed for building libspectrum
-RUN apt-get install -y wget xz-utils build-essential libglib2.0
+# xz-utils is needed by tar command below and build-essential is needed for building z80 binutils and libspectrum/fuse and libglib2.0 is needed for building libspectrum and bsdmainutils contains hexdump
+RUN apt-get install -y wget xz-utils build-essential libglib2.0 bsdmainutils
 
 # install libspectrum (needed by fuse)
 RUN curl -L https://sourceforge.net/projects/fuse-emulator/files/libspectrum/1.4.4/libspectrum-1.4.4.tar.gz/download > libspectrum-1.4.4.tar.gz && tar xvfz libspectrum-1.4.4.tar.gz && cd libspectrum-1.4.4 && ./configure && make && make install && cd ..
@@ -34,7 +34,7 @@ RUN wget -O binutils.tar.gz https://ftpmirror.gnu.org/binutils/binutils-2.35.1.t
 # and copy everything needed into /dist
 # LD_LIBRARY_PATH needed for ldd to find libspectrum.so.8
 ENV LD_LIBRARY_PATH /usr/local/lib
-RUN for tool in /bin/sh aarch64-none-elf-as aarch64-none-elf-ld aarch64-none-elf-objcopy aarch64-none-elf-objdump aarch64-none-elf-readelf bash curl cat cp dirname env find fuse mkdir rm sed sleep wc which xvfb-run z80-unknown-elf-as z80-unknown-elf-ld z80-unknown-elf-objcopy z80-unknown-elf-objdump z80-unknown-elf-readelf; do file=$(which ${tool}); ldd $file 2>/dev/null || true; echo $file; done | sed 's/(.*//' | sed 's/^[^\/]*//' | grep '^/' | sort -u | while read line; do echo "${line}"; mkdir -p "$(dirname "/dist${line}")"; cp -vp "${line}" "/dist${line}"; done
+RUN for tool in /bin/sh aarch64-none-elf-as aarch64-none-elf-ld aarch64-none-elf-objcopy aarch64-none-elf-objdump aarch64-none-elf-readelf bash cat cp curl dirname env find fuse head hexdump mkdir mv rm sed sleep wc which z80-unknown-elf-as z80-unknown-elf-ld z80-unknown-elf-objcopy z80-unknown-elf-objdump z80-unknown-elf-readelf; do file=$(which ${tool}); ldd $file 2>/dev/null || true; echo $file; done | sed 's/(.*//' | sed 's/^[^\/]*//' | grep '^/' | sort -u | while read line; do echo "${line}"; mkdir -p "$(dirname "/dist${line}")"; cp -vp "${line}" "/dist${line}"; done
 
 # add certificates needed by curl to /dist
 RUN mkdir -p /dist/etc/ssl/certs && cp -vp /etc/ssl/certs/ca-certificates.crt /dist/etc/ssl/certs/ca-certificates.crt
