--- a/.github/workflows/all.yml
+++ b/.github/workflows/all.yml
@@ -1,9 +1,21 @@
-name: Build and Test
+name: CI for spectrum4
 on: [push, pull_request]
 jobs:
-  all:
+  build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - run: ./tup-under-docker.sh
-    - run: git status && test $(git status --porcelain | wc -l) == 0
+      - name: checkout code
+        uses: actions/checkout@v2
+      - name: install buildx
+        id: buildx
+        uses: crazy-max/ghaction-docker-buildx@v1
+        with:
+          version: latest
+      - name: login to docker hub
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+      - name: build/push docker images
+        run: docker/build.sh
+      - name: build and test spectrum4
+        run: ./tup-under-docker.sh
+      - name: ensure no local file changes present
+        run: git status && test $(git status --porcelain | wc -l) == 0
