Create dev system bootstrap scripts and instructions for macOS, Ubuntu, Windows

--- a/.github/workflows/docker-images.yml
+++ b/.github/workflows/docker-images.yml
@@ -17,4 +17,4 @@ jobs:
       - name: login to docker hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
       - name: build/push docker images
-        run: docker/build.sh
+        run: dev-setup/docker/build.sh
